--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.15.2
   firebase_auth: ^5.4.5
   cloud_firestore: ^5.6.1
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
   flutter_test:
